[package]
name = "supermemo2"
version = "0.2.0"
authors = ["Joshua Cooper <joshua@cooper.cx>"]
license = "ISC"
description = "A simple crate that implements the supermemo2 spaced repetition algorithm."
keywords = ["supermemo", "supermemo2", "sm2"]
homepage = "https://github.com/joshua-cooper/supermemo2"
repository = "https://github.com/joshua-cooper/supermemo2"
edition = "2018"

[dependencies]
